<resources>
    <string name="app_name">Assistant Widget</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="configure">Configure</string>
    <string name="add_widget">Add widget</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="todo_dialog_hint">What\'s in your mind ?</string>
    <string name="todo_dialog_title">Add Todo</string>
    <string name="todo_dialog_add">Add</string>
    <string name="todo_dialog_cancel">Cancel</string>
    <string name="label_tasks_pending">tasks pending</string>
    <string name="title_simple_widget">Todo App - Pending Tasks</string>
    <string name="title_collection_widget">Travel Assistant</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">"%1$s won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">"%1$s won't run without Google Play services, which are missing from your device."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">"%1$s won't run without Google Play services, which are not supported by your device."</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">"%1$s won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">"%1$s won't run without Google Play services, which are currently updating."</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="exo_controls_fastforward_description">Fast forward</string>
    <string name="exo_controls_next_description">Next track</string>
    <string name="exo_controls_pause_description">Pause</string>
    <string name="exo_controls_play_description">Play</string>
    <string name="exo_controls_previous_description">Previous track</string>
    <string name="exo_controls_repeat_all_description">Repeat all</string>
    <string name="exo_controls_repeat_off_description">Repeat none</string>
    <string name="exo_controls_repeat_one_description">Repeat one</string>
    <string name="exo_controls_rewind_description">Rewind</string>
    <string name="exo_controls_stop_description">Stop</string>
    <string name="fcm_fallback_notification_channel_label">Miscellaneous</string>
    <string name="gcm_fallback_notification_channel_label">Miscellaneous</string>
    <string name="joda_time_android_date_time">%1$s, %2$s</string>
    <string name="joda_time_android_preposition_for_date">on %s</string>
    <string name="joda_time_android_preposition_for_time">at %s</string>
    <string name="joda_time_android_relative_time">%1$s, %2$s</string>
    <string name="s1">Save image</string>
    <string name="s2">Allow Ad to store image in Picture gallery?</string>
    <string name="s3">Accept</string>
    <string name="s4">Decline</string>
    <string name="s5">Create calendar event</string>
    <string name="s6">Allow Ad to create a calendar event?</string>
    <string name="search_menu_title">Search</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="ll_airport">Airport</string>
    <string name="ll_begin_route">Begin route at</string>
    <string name="ll_button_directions">Directions</string>
    <string name="ll_cancel_route">Cancel Route</string>
    <string name="ll_choose_end_point">Choose End Point</string>
    <string name="ll_choose_starting_point">Choose Starting Point</string>
    <string name="ll_current_location">Current Location</string>
    <string name="ll_destination">destination</string>
    <string name="ll_est_arrival">Est. Arrival -</string>
    <string name="ll_est_departure">Est. Departure -</string>
    <string name="ll_flight">Flight</string>
    <string name="ll_gate">Gate</string>
    <string name="ll_icon_airline_logo_description">A logo belonging to an Airline.</string>
    <string name="ll_icon_airplane_pin_description">An icon inside that shows an airplane.</string>
    <string name="ll_icon_caret_down_description">A caret symbol pointed down, denoting that the associated view may be moved in a downward fashion or visualizes as a cue to look below the symbol.</string>
    <string name="ll_levels">Levels</string>
    <string name="ll_levels_count">%1$d</string>
    <string name="ll_levels_item_floor_hyphen_details">%1$s - %2$s</string>
    <string name="ll_location_nearby">Locations Nearby</string>
    <string name="ll_minutes">min.</string>
    <string name="ll_my_arrival_gate">My Arrival Gate</string>
    <string name="ll_my_departure_gate">My Departure Gate</string>
    <string name="ll_my_location">My Location</string>
    <string name="ll_next">Next</string>
    <string name="ll_not_available">Not Available</string>
    <string name="ll_other_locations">Other Locations</string>
    <string name="ll_poi_amenity_bar">Fully Stocked Bar</string>
    <string name="ll_poi_amenity_business_center">Business Center</string>
    <string name="ll_poi_amenity_conference_room">Conference Rooms</string>
    <string name="ll_poi_amenity_customer_service">Flight Assistance</string>
    <string name="ll_poi_amenity_entertainment">Entertainment</string>
    <string name="ll_poi_amenity_header">Amenities</string>
    <string name="ll_poi_amenity_showers">Showers</string>
    <string name="ll_poi_amenity_snacksbev">Snacks &amp; Refreshments</string>
    <string name="ll_poi_amenity_wifi">Complimentary Wi-Fi</string>
    <string name="ll_poi_amenity_wine">Premium Wine</string>
    <string name="ll_poi_location_inside_security">Inside Security</string>
    <string name="ll_poi_location_outside_security">Outside Security</string>
    <string name="ll_poi_photo_loading">Loading Photo…</string>
    <string name="ll_poi_photo_no_internet">"No Internet Connection Detected
Point of Interest Photos Not Available"</string>
    <string name="ll_poi_photo_not_available">Point of Interest Photo Not Available</string>
    <string name="ll_poi_photo_x_of_y">%1$d of %2$d</string>
    <string name="ll_poi_terminal_hyphen_gate">%1$s - %2$s</string>
    <string name="ll_poi_unknown_operating_hours">Operating Hours Unknown</string>
    <string name="ll_poi_unknown_phone_number">Phone Number Unknown</string>
    <string name="ll_poi_unknown_website">Web Site Unknown</string>
    <string name="ll_poi_website">Web Site</string>
    <string name="ll_poi_website_name_default">website</string>
    <string name="ll_popular_searches">Popular Searches</string>
    <string name="ll_previous">Previous</string>
    <string name="ll_recent_searches">Recent Searches</string>
    <string name="ll_recently_viewved">Recently Viewed</string>
    <string name="ll_relevants_poiids">Relevant To Me</string>
    <string name="ll_results">Results</string>
    <string name="ll_route_to">Route to</string>
    <string name="ll_sched_arrival">Sched. Arrival -</string>
    <string name="ll_sched_departure">Sched. Departure -</string>
    <string name="ll_search">Search</string>
    <string name="ll_search_particular_venue">Search %1$s Airport</string>
    <string name="ll_search_results_other_levels">"Search results
on other levels"</string>
    <string name="ll_show_directions">SHOW DIRECTIONS</string>
    <string name="ll_walk_to">Walk to</string>
    <string name="resource_sets_category">phone</string>
    <string name="AA_Locator_xx_US_Airways_Locator_xx">AA Locator: %1$s | US Airways Locator: %2$s</string>
    <string name="AAdvantage_Number">AAdvantage Number:</string>
    <string name="AAdvantage_text">AAdvantage</string>
    <string name="ACTUAL_TIME">ACTUAL TIME    </string>
    <string name="AIRPLANE_INFO">AIRPLANE INFO</string>
    <string name="APP_ID">237855176389244</string>
    <string name="ARRIVE">ARRIVE</string>
    <string name="Add_passes_for">Add passes for:</string>
    <string name="Admirals_Club_locations">Admirals Club locations</string>
    <string name="AirPass">AirPass</string>
    <string name="Aircraft_type">Aircraft type</string>
    <string name="Airplane_type">Airplane type</string>
    <string name="American">American</string>
    <string name="AmericanSans">AmericanSans</string>
    <string name="AmericanSans_Book">AmericanSans_Book</string>
    <string name="AmericanSans_Light">AmericanSans_Light</string>
    <string name="AmericanSans_Medium">AmericanSans_Medium</string>
    <string name="Arrive">Arrive</string>
    <string name="Arrived">Arrived</string>
    <string name="Arrives">Arrives</string>
    <string name="BAG">BAG</string>
    <string name="BAG_CLAIM">BAG CLAIM</string>
    <string name="BOARDING">BOARDING</string>
    <string name="Bag">Bag</string>
    <string name="Baggage_and_optional_service_fees">Baggage and optional service fees</string>
    <string name="DEPART">DEPART</string>
    <string name="EXIT">EXIT</string>
    <string name="GATE">GATE</string>
    <string name="SEAT">SEAT</string>
    <string name="STATUS">STATUS</string>
    <string name="american_airlines">American Airlines</string>
    <string name="boarding_pass_term">TERM</string>
    <string name="search_flights">Search Flights</string>
    <string name="widget_no_available_boarding">You currently have no available boarding passes</string>
    <string name="widget_no_data">--</string>
    <string name="widget_open_app">Open App</string>
</resources>