<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:background="@null" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:layout_gravity="center" android:background="@color/white_transparent" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:id="@+id/widget_top" android:background="@color/american_blue" android:layout_width="fill_parent" android:layout_height="3.0dip" android:layout_alignParentTop="true" />
        <RelativeLayout android:id="@+id/widget_mbp_loading_top" android:paddingLeft="@dimen/widget_mbp_view_padding" android:paddingRight="@dimen/widget_mbp_view_padding" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <ImageView android:id="@+id/widget_mbp_logo" android:paddingLeft="0.0dip" android:paddingTop="@dimen/widget_mbp_logo_padding_top_bottom" android:paddingRight="@dimen/widget_mbp_logo_padding_right_left" android:paddingBottom="@dimen/widget_mbp_logo_padding_top_bottom" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ic_logo_widget" android:layout_toRightOf="@+id/widget_header_logo_padding" android:layout_centerVertical="true" android:layout_alignWithParentIfMissing="true" />
            <TextView android:textSize="20.0sp" android:text="@string/american_airlines" android:layout_toRightOf="@+id/widget_mbp_logo" android:layout_centerVertical="true" style="@style/WidgetText" />
            <TextView android:layout_marginLeft="0.0dip" android:layout_marginRight="0.0dip" android:layout_below="@+id/widget_mbp_logo" style="@style/WidgetDiv" />
        </RelativeLayout>
        <RelativeLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_below="@+id/widget_mbp_loading_top">
            <TextView android:id="@+id/widget_mbp_loading_button" android:visibility="invisible" android:layout_width="10.0dip" android:layout_centerHorizontal="true" style="@style/WidgetText.Button" />
            <TextView android:id="@+id/widget_mbp_loading_div" android:visibility="invisible" android:layout_below="@+id/widget_mbp_loading_button" style="@style/WidgetDiv" />
            <LinearLayout android:orientation="vertical" android:paddingTop="@dimen/widget_mbp_bottom_row_padding" android:paddingBottom="@dimen/widget_mbp_bottom_row_padding" android:visibility="invisible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_below="@+id/widget_mbp_loading_div" android:layout_centerHorizontal="true">
                <TextView android:id="@+id/widget_mbp_seat" android:text="@string/SEAT" style="@style/WidgetText.Label" />
                <LinearLayout android:orientation="@integer/widget_mbp_lin_layout_orientation" android:layout_width="wrap_content" android:layout_height="wrap_content">
                    <TextView android:id="@+id/widget_mbp_seat_data" android:text="@string/widget_no_data" style="@style/WidgetText.Data" />
                    <TextView android:id="@+id/widget_mbp_seat_data_subtext" android:visibility="invisible" android:layout_marginLeft="@dimen/widget_mbp_seat_left_margin" android:layout_marginTop="-3.0dip" android:text="@string/EXIT" style="@style/WidgetText.Label" />
                </LinearLayout>
            </LinearLayout>
            <ProgressBar android:layout_width="wrap_content" android:layout_height="wrap_content" android:indeterminate="true" android:layout_centerInParent="true" />
        </RelativeLayout>
    </RelativeLayout>
</FrameLayout>