<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:id="@+id/widget_empty_view" android:background="@null" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#68a39b9b"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <RelativeLayout android:layout_gravity="center" android:background="@color/white_transparent" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:id="@+id/widget_mbp_top" android:background="@color/american_blue" android:layout_width="fill_parent" android:layout_height="3.0dip" android:layout_alignParentTop="true" />
        <FrameLayout android:id="@+id/widget_mbp_left_arrow_wrapper" android:layout_width="wrap_content" android:layout_height="wrap_content" android:minWidth="@dimen/widget_mbp_view_padding" android:layout_above="@+id/widget_mbp_title_div" android:layout_below="@+id/widget_mbp_top" android:layout_alignParentLeft="true">
            <ImageButton android:layout_gravity="center_vertical" android:id="@+id/widget_mbp_left_arrow" android:background="@drawable/bg_light_transparent_selectable" android:paddingLeft="@dimen/widget_mbp_view_padding" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="fill_parent" android:src="@drawable/ic_circle_arrow_left_blue" />
        </FrameLayout>
        <RelativeLayout android:id="@+id/widget_mbp_header" android:background="@drawable/bg_light_transparent_selectable" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_toLeftOf="@+id/widget_mbp_right_arrow_wrapper" android:layout_toRightOf="@+id/widget_mbp_left_arrow_wrapper" android:layout_below="@+id/widget_mbp_top">
            <TextView android:id="@+id/widget_header_logo_padding" android:visibility="gone" android:layout_width="@dimen/widget_mbp_logo_padding_right_left" android:layout_height="10.0dip" android:layout_alignParentLeft="true" android:layout_centerVertical="true" />

            <ImageView
                android:id="@+id/widget_mbp_logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignWithParentIfMissing="true"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/widget_header_logo_padding"
                android:paddingBottom="@dimen/widget_mbp_logo_padding_top_bottom"
                android:paddingLeft="0.0dip"
                android:paddingRight="@dimen/widget_mbp_logo_padding_right_left"
                android:paddingTop="@dimen/widget_mbp_logo_padding_top_bottom"
                android:src="@drawable/ic_logo_widget" />
            <LinearLayout android:orientation="@integer/widget_mbp_lin_layout_orientation" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_toRightOf="@+id/widget_mbp_logo" android:layout_centerVertical="true">
                <TextView android:textSize="@dimen/widget_header_text_size" android:id="@+id/widget_mbp_flight_num" android:text="@string/widget_no_available_boarding" style="@style/WidgetText" />
                <TextView android:textSize="12.0sp" android:id="@+id/widget_mbp_operator" android:visibility="gone" android:layout_marginLeft="@dimen/widget_mbp_operator_left_margin" style="@style/WidgetText" />
            </LinearLayout>
        </RelativeLayout>
        <FrameLayout android:id="@+id/widget_mbp_right_arrow_wrapper" android:layout_width="wrap_content" android:layout_height="wrap_content" android:minWidth="@dimen/widget_mbp_view_padding" android:layout_above="@+id/widget_mbp_title_div" android:layout_below="@+id/widget_mbp_top" android:layout_alignParentRight="true">
            <ImageButton android:layout_gravity="center_vertical" android:id="@+id/widget_mbp_right_arrow" android:background="@drawable/bg_light_transparent_selectable" android:paddingRight="@dimen/widget_mbp_view_padding" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="fill_parent" android:src="@drawable/ic_circle_arrow_right_blue" />
        </FrameLayout>
        <TextView android:id="@+id/widget_mbp_title_div" android:layout_below="@+id/widget_mbp_header" style="@style/WidgetDiv" />
        <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:id="@+id/widget_mbp_lin_layout_wrapper" android:paddingLeft="@dimen/widget_mbp_view_padding" android:paddingRight="@dimen/widget_mbp_view_padding" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_below="@+id/widget_mbp_title_div">
            <TextView android:id="@+id/widget_mbp_left_button" android:visibility="visible" android:text="@string/widget_open_app" style="@style/WidgetText.Button" />
            <TextView android:id="@+id/widget_mbp_button_spacing" android:visibility="visible" android:layout_width="wrap_content" android:layout_height="10.0dip" android:layout_weight="@integer/widget_mbp_button_spacing" />
            <LinearLayout android:orientation="vertical" android:id="@+id/widget_mbp_flight_info" android:visibility="gone" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="@integer/widget_mbp_flight_info_weight">
                <LinearLayout android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="-5.0dip">
                    <TextView android:id="@+id/widget_mbp_flight_from" style="@style/WidgetText.Selectable" />
                    <ImageView android:layout_gravity="center_vertical" android:id="@+id/widget_mbp_plane_icon" android:paddingLeft="10.0dip" android:paddingRight="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ic_airplane_slate" />
                    <TextView android:id="@+id/widget_mbp_flight_dest" style="@style/WidgetText.Selectable" />
                </LinearLayout>
                <TextView android:id="@+id/widget_mbp_flight_date" android:layout_marginTop="-3.0dip" style="@style/WidgetText" />
            </LinearLayout>
            <TextView android:id="@+id/widget_mbp_right_button" android:text="@string/search_flights" style="@style/WidgetText.Button" />
        </LinearLayout>
        <TextView android:id="@+id/widget_mbp_item_div" android:layout_below="@+id/widget_mbp_lin_layout_wrapper" style="@style/WidgetDiv" />
        <LinearLayout android:orientation="horizontal" android:id="@+id/widget_mbp_flight_data" android:paddingLeft="@dimen/widget_mbp_view_padding" android:paddingTop="@dimen/widget_mbp_bottom_row_padding" android:paddingRight="@dimen/widget_mbp_view_padding" android:paddingBottom="@dimen/widget_mbp_bottom_row_padding" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_below="@+id/widget_mbp_item_div">
            <LinearLayout android:orientation="vertical" android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_weight="@integer/widget_mbp_status_weight">
                <TextView android:id="@+id/widget_mbp_status" android:text="@string/STATUS" style="@style/WidgetText.Label" />
                <TextView android:id="@+id/widget_mbp_status_data" android:text="@string/widget_no_data" style="@style/WidgetText.Data" />
            </LinearLayout>
            <LinearLayout android:orientation="vertical" android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_weight="@integer/widget_mbp_depart_weight">
                <TextView android:id="@+id/widget_mbp_depart" android:text="@string/DEPART" style="@style/WidgetText.Label" />
                <TextView android:id="@+id/widget_mbp_depart_data" android:layout_width="wrap_content" android:text="@string/widget_no_data" style="@style/WidgetText.Data" />
            </LinearLayout>
            <LinearLayout android:orientation="vertical" android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_weight="@integer/widget_mbp_gate_weight">
                <TextView android:id="@+id/widget_mbp_gate" android:text="@string/GATE" style="@style/WidgetText.Label" />
                <TextView android:id="@+id/widget_mbp_gate_data" android:text="@string/widget_no_data" style="@style/WidgetText.Data" />
            </LinearLayout>
            <LinearLayout android:orientation="vertical" android:id="@+id/widget_mbp_terminal_column" android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_weight="@integer/widget_mbp_terminal_weight">
                <TextView android:id="@+id/widget_mbp_term" android:text="@string/boarding_pass_term" style="@style/WidgetText.Label" />
                <TextView android:id="@+id/widget_mbp_term_data" android:text="@string/widget_no_data" style="@style/WidgetText.Data" />
            </LinearLayout>
            <LinearLayout android:orientation="vertical" android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_weight="8.0">
                <TextView android:id="@+id/widget_mbp_seat" android:text="@string/SEAT" style="@style/WidgetText.Label" />
                <LinearLayout android:orientation="@integer/widget_mbp_lin_layout_orientation" android:layout_width="wrap_content" android:layout_height="wrap_content">
                    <TextView android:id="@+id/widget_mbp_seat_data" android:text="@string/widget_no_data" style="@style/WidgetText.Data" />
                    <TextView android:id="@+id/widget_mbp_seat_data_subtext" android:visibility="invisible" android:layout_marginLeft="@dimen/widget_mbp_seat_left_margin" android:layout_marginTop="-3.0dip" android:text="@string/EXIT" style="@style/WidgetText.Label" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#26a39b9b"></LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <ListView
                android:id="@+id/widgetListView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#26a39b9b"
                android:divider="#26a39b9b"
                android:dividerHeight="1.5dp"
                tools:listitem="@layout/list_widget"></ListView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#26a39b9b"></LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dip">

            <ImageView
                android:id="@+id/can_sch_flt"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/btn_bckgrnd6"
                android:padding="2dp"
                android:src="@drawable/reschedule" />

            <LinearLayout
                android:layout_width="2dip"
                android:layout_height="match_parent"
                android:background="#26a39b9b"></LinearLayout>

            <ImageView
                android:id="@+id/talk_agent"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/btn_bckgrnd6"
                android:padding="4dp"
                android:src="@drawable/chat_agent" />

            <LinearLayout
                android:layout_width="2dip"
                android:layout_height="match_parent"
                android:background="#26a39b9b"></LinearLayout>

            <ImageView
                android:id="@+id/aa_com"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/btn_bckgrnd6"
                android:padding="2dp"
                android:src="@drawable/aa_flight_icon" />
        </LinearLayout>
    </LinearLayout>
    </LinearLayout>
</FrameLayout>

